# NeVideoDecodeSync

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sty/ne/video/decodesync/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sty/ne/video/decodesync/: MainActivity.java  NePlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sty/ne/video/decodesync/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
